--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,6 +7,9 @@ Authors@R:
 Description: This package mainly contains some miscellaneous utilities
     that I use frequently.
 License: MIT + file LICENSE
+Imports:
+    rlang,
+    tarchetypes
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
