--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,8 @@ Description: This package mainly contains some miscellaneous utilities
 License: MIT + file LICENSE
 Imports:
     rlang,
-    tarchetypes
+    tarchetypes,
+    tidyselect
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
