--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,9 +11,8 @@ Imports:
     dplyr,
     rlang,
     stringr,
-    tidyr,
-    tidyselect,
-    vctrs
+    tibble,
+    tidyselect
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
