--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,12 +11,12 @@ Imports:
     dplyr,
     rlang,
     stringr,
-    tibble,
     tidyr,
     tidyselect
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
-Suggests: 
-    testthat (>= 3.0.0)
+Suggests:
+    testthat (>= 3.0.0),
+    tibble
 Config/testthat/edition: 3
