--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,16 +7,17 @@ Authors@R:
 Description: This package mainly contains some miscellaneous utilities
     that I use frequently.
 License: MIT + file LICENSE
+URL: https://psychelzh.github.io/zutils/
 Imports:
     dplyr,
     rlang,
     stringr,
     tidyr,
     tidyselect
-Encoding: UTF-8
-Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.3
 Suggests:
     testthat (>= 3.0.0),
     tibble
 Config/testthat/edition: 3
+Encoding: UTF-8
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.2.3
