--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,8 +15,7 @@ Imports:
     tidyr,
     tidyselect
 Suggests:
-    testthat (>= 3.0.0),
-    tibble
+    testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
