--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,8 @@ Imports:
     rlang,
     stringr,
     tidyr,
-    tidyselect
+    tidyselect,
+    utils
 Suggests:
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
